<resources>
    <string name="app_name">Máquina Binária</string>
    <string name="val_bin">Valor Binário</string>
    <string name="bt_convert">Converter</string>
    <string name="et_dec">Valor em decimal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="unidade1_projeto1">Binary Machine</string>
    <string name="unidade1_projeto2">Projeto 2</string>
    <string name="unidade1_projeto3">Projeto 3</string>
    <string name="unidade1_projeto4">Projeto 4</string>
    <string name="unidade1_projeto5">Projeto 5</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="simulator">Simulador</string>
    <string name="enter_system">|F(B, t, U, O)</string>
    <string name="enter_function">Digite a função</string>
    <string name="enter_ranger_a">Digite o intervalo inicial A</string>
    <string name="enter_range_b">Digite o intervalo inicial B</string>
    <string name="enter_tolerance">Digite a tolerância</string>
    <string name="enter_repeat">DIgite o número máximo de iterações</string>
    <string name="bisection">Bissecção</string>
    <string name="calculate">Calcular raiz</string>
    <string name="firts_approximation">Primeira aproximação</string>
    <string name="newton">Newton-Raphson</string>
</resources>
