<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/layout_padding"
    android:paddingLeft="@dimen/layout_padding"
    android:paddingRight="@dimen/layout_padding"
    android:paddingTop="@dimen/layout_padding"
    tools:context="calcnumerico.ph.maquinabinaria.Activities.NewtonActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_function_n"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_function" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_first_approximation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firts_approximation"
            android:inputType="number|numberSigned|numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_tolerance_n"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_tolerance"
            android:inputType="number|numberSigned|numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_repetition_n"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_repeat"
            android:inputType="number|numberSigned|numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/txt_result_n"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:padding="8dp"
        android:textAppearance="@android:style/TextAppearance" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/bt_bissecion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/button_border"
            android:onClick="calcRootNewton"
            android:text="@string/calculate"
            android:textColor="@android:color/white" />
    </RelativeLayout>

</LinearLayout>
